# adversarial_noise

./: README.md  pyproject.toml  requirement.txt
examples/: demo.py
src/: adversarial.py  data_preproc.py  model_utils.py
tests/: test_adversarial_noise.py  test_model_predictions.py
